Add isEmpty() and isNotEmpty() methods to Streamable